Fixed error handling, updated swagger.
