# KtorServer/src/main/kotlin/com/example/domain/exceptions/NoSuchCompetitionException.kt
@@ -1,4 +1,0 @@
-package com.example.domain.exceptions
-
-class NoSuchCompetitionException: Exception("There is no competition with this identifier.") {
-}
