# KtorServer/src/main/kotlin/com/example/handler/HandlerCompetition.kt
@@ -3,9 +3,8 @@ package com.example.handler
 import com.example.controller.ControllerCompetition
 import com.example.domain.exceptions.MissingBodyParameterException
 import com.example.domain.exceptions.MissingPathParameterException
-import com.example.domain.exceptions.NoSuchCompetitionException
-import com.example.domain.exceptions.ParsingException
 import com.example.domain.model.CompetitionScore
+import com.example.domain.model.EmptyJson
 import com.example.domain.paths.CompetitionsPath
 import io.ktor.application.*
 import io.ktor.http.*
@@ -13,43 +12,32 @@ import io.ktor.request.*
 import io.ktor.response.*
 import kotlinx.serialization.encodeToString
 import kotlinx.serialization.json.Json
-import java.lang.Exception
 import java.lang.NullPointerException
-import java.lang.NumberFormatException
 
-class HandlerCompetition(val controller: ControllerCompetition) {
+class HandlerCompetition(private val controller: ControllerCompetition) {
 
     suspend fun getCompetitions(applicationCall: ApplicationCall, competitionsPath: CompetitionsPath) {
         if (competitionsPath.userId < 0)
             throw MissingPathParameterException()
 
-        try {
-            val competitions =
-                controller.getCompetitions(
-                    competitionsPath.userId,
-                    competitionsPath.timestamp
-                )
-            applicationCall.respond(HttpStatusCode.OK, Json.encodeToString(competitions))
+        val competitions =
+            controller.getCompetitions(
+                competitionsPath.userId,
+                competitionsPath.timestamp
+            )
 
-        } catch (e: NoSuchCompetitionException) {
-            applicationCall.respond(HttpStatusCode.BadRequest, e.toString())
-        }
+        applicationCall.respond(HttpStatusCode.OK, Json.encodeToString(competitions))
     }
 
     suspend fun getCompetition(applicationCall: ApplicationCall, competitionsIdPath: CompetitionsPath.CompetitionId) {
-        //no parameter checking necessary, since it does not end up at this method otherwise
+        //no parameter check necessary
         val competition =
             controller.getCompetition(competitionsIdPath.id)
 
-        try {
-            val competition =
-                controller.getCompetition(competitionsIdPath.id)
+        if (competition == null)
+            applicationCall.respond(HttpStatusCode.OK, Json.encodeToString(EmptyJson()))
+        else
             applicationCall.respond(HttpStatusCode.OK, Json.encodeToString(competition))
-
-            //TODO add custom exceptions for getCompetition in Controller
-        } catch (e: Exception) {
-            applicationCall.respond(HttpStatusCode.InternalServerError, e.toString())
-        }
     }
 
     suspend fun postCompetitions(applicationCall: ApplicationCall) {
@@ -58,16 +46,11 @@ class HandlerCompetition(val controller: ControllerCompetition) {
             val userIdOne = params["userIdOne"]!!.toInt()
             val userIdTwo = params["userIdTwo"]!!.toInt()
 
-            val competitionId = controller.postCompetitions(userIdOne, userIdTwo)
-            applicationCall.respond(HttpStatusCode.OK, competitionId)
+            val competition = controller.postCompetitions(userIdOne, userIdTwo)
+            applicationCall.respond(HttpStatusCode.Created, competition)
 
-            //TODO add custom exceptions for postCompetitions in Controller
-        } catch (e: NumberFormatException) {
-            throw ParsingException()
         } catch (e: NullPointerException) {
             throw MissingBodyParameterException()
-        } catch (e: Throwable) {
-            applicationCall.respond(HttpStatusCode.InternalServerError, e.toString())
         }
     }
 
@@ -83,15 +66,10 @@ class HandlerCompetition(val controller: ControllerCompetition) {
             )
 
             controller.putCompetitionScore(score)
-            applicationCall.respond(HttpStatusCode.OK, "Competition score added successfully.")
+            applicationCall.respond(HttpStatusCode.Created, "Competition score added successfully.")
 
-            //TODO add custom exceptions for putCompetitionScores in Controller
-        } catch (e: NumberFormatException) {
-            throw ParsingException()
-        } catch (e: NullPointerException) {
+        }  catch (e: NullPointerException) {
             throw MissingBodyParameterException()
-        } catch (e: Throwable) {
-            applicationCall.respond(HttpStatusCode.InternalServerError, e.toString())
         }
     }
 }
